# ScrollMPRIS

./: Cargo.toml  README.md
src/: config.rs  main.rs  mpris.rs  player.rs  scroll.rs  utils.rs
src/mpris/: connection.rs  events.rs  metadata.rs  mod.rs
