[package]
name = "ScrollMPRIS"
version = "1.0.0"
edition = "2021"

[dependencies]
dbus = "0.9.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
clap = { version = "4.5.36", features = ["derive"] }
anyhow = "1.0.98"
regex = "1.11.1"

[dev-dependencies]
assert_matches = "1.5.0"
