[package]
name = "ScrollMPRIS"
version = "1.0.0"
edition = "2024"

[dependencies]
dbus = { version = "0.9.7", features = ["futures"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.39", features = ["derive"] }
anyhow = "1.0.98"
regex = "1.11.1"
tokio = { version = "1.38.0", features = ["full"] }
dbus-tokio = "0.7.6"
once_cell = "1.19.0"
thiserror = "1.0.61"

[profile.release]
opt-level = "z"
lto = true
strip = "symbols"

[dev-dependencies]
assert_matches = "1.5.0"
